--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "dev": "ts-node src/app.ts"
+    "dev": "ts-node -r dotenv/config src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^12.12.12",
     "@types/readline-sync": "^1.4.3",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "algorithmia": "^0.3.10",
+    "dotenv": "^8.2.0",
     "readline-sync": "^1.4.10"
   }
 }
