--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "devDependencies": {
     "@types/node": "^12.12.12",
     "@types/readline-sync": "^1.4.3",
+    "@types/sbd": "^1.0.1",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
   "dependencies": {
     "algorithmia": "^0.3.10",
     "dotenv": "^8.2.0",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "sbd": "^1.0.16"
   }
 }
