--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/gm": "^1.18.6",
     "@types/node": "^12.12.12",
     "@types/readline-sync": "^1.4.3",
     "@types/sbd": "^1.0.1",
@@ -19,6 +20,7 @@
   "dependencies": {
     "algorithmia": "^0.3.10",
     "dotenv": "^8.2.0",
+    "gm": "^1.23.1",
     "googleapis": "^45.0.0",
     "ibm-watson": "^5.1.0",
     "image-downloader": "^3.5.0",
